# dbvirus

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
analyzer/: Snakefile  Snakemake.smk  config.yaml  diamond.yaml  download_db.sh
analyzer/envs/: diamond.yaml  kallisto.yaml
downloader/: README.md
searcher/: __init__.py  __main__.py  searcher.py
searcher/cacher/: documents.py
searcher/tests/: conftest.py  sample_efetch_result.xml  schemata.py  test_searcher.py  test_searcher_functional.py
utils/: sra.py
